# oemmpa

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  pyproject.toml  pyrightconfig.json  tasks.py  vrzn.toml
.github/workflows/: build-wheels.yml
benchmarks/: __init__.py  analysis.py  benchmark_suite.py  corpus.py  head_to_head.py  mmpdb_compare.py  rdkit_compare.py  rendering.py  report.py  report_html.py  stage_benchmark.py
benchmarks/data/: rdkit_reference.smi
cmake/: FindDuckDB.cmake
cmake/cmake-openeye/: FindOpenEye.cmake  FindOpenEyePython.cmake  OpenEyeSWIG.cmake  README.md
docs/: Makefile  __init__.py  benchmarks.md  cli.md  conf.py  cpp-core.md  developer.md  index.md  python-api.md  quickstart.md  rdkit-comparison.md  requirements.txt
docs/api/: cpp.rst  python.rst
examples/: getting_started.ipynb  oemmpa_walkthrough.ipynb
examples/data/: Bender.csv
include/oemmpa/: AnalysisMethod.h  Analyzer.h  DMCSSMethod.h  DatabaseSummary.h  Desalter.h  DuckDBStore.h  EnvironmentFingerprint.h  Error.h  Fragmentation.h  FragmentationMethod.h  FragmentationStrategy.h  Fragmenter.h  LoadReport.h  MCSCommon.h  MatchedPair.h  MemoryIndex.h  MoleculeRecord.h  OEMedChemMethod.h  PairScoring.h  QueryEnvironment.h  QueryOptions.h  RuleEnvironmentStatistics.h  ThreadSupport.h  Transform.h  TransformApplication.h  VariableFragmentMetrics.h  WizePairZMethod.h  oemmpa.h
python/: pyproject.toml
python/oemmpa/: __init__.py  __main__.py  _analytics.py  _dataframe.py  _display.py  _facade.py  _loading.py  _query.py  _results.py  _rgroup.py  _rule_environment.py  _smiles_file.py  _storage.py  _transform.py  _workflow.py  cli.py
python/oemmpa/data/: salts.smarts  solvents.smarts
python/oemmpa_cli/: __init__.py  cli.py
src/: Analyzer.cpp  DMCSSMethod.cpp  DatabaseSummary.cpp  Desalter.cpp  DuckDBStore.cpp  EnvironmentFingerprint.cpp  Fragmentation.cpp  FragmentationMethod.cpp  FragmentationStrategy.cpp  Fragmenter.cpp  LoadReport.cpp  MCSCommon.cpp  MatchedPair.cpp  MemoryIndex.cpp  MoleculeRecord.cpp  OEMedChemMethod.cpp  PairScoring.cpp  QueryEnvironment.cpp  QueryOptions.cpp  RuleEnvironmentStatistics.cpp  ThreadSupport.cpp  Transform.cpp  TransformApplication.cpp  WizePairZMethod.cpp  oemmpa.cpp
swig/: CMakeLists.txt  oemmpa.i
tests/cpp/: CMakeLists.txt  test_analyzer.cpp  test_data_objects.cpp  test_desalter.cpp  test_duckdb_store.cpp  test_environment_fingerprint.cpp  test_errors.cpp  test_fragmentation_strategy.cpp  test_fragmenter.cpp  test_load_report.cpp  test_mcs_common.cpp  test_memory_index.cpp  test_molecule_record.cpp  test_oemmpa.cpp  test_pair_scoring.cpp  test_query_options.cpp  test_transform_application.cpp  test_wizepairz.cpp
tests/data/: benchmark_baseline_fixture.csv  benchmark_current_fixture.csv  build_surechembl_fixture.py  mmpa_properties.csv  mmpa_smiles.smi  surechembl_headtohead.provenance.json  surechembl_headtohead.smi  surechembl_mmp_fixture.provenance.json  surechembl_mmp_fixture.smi
tests/data/duckdb_golden/: compound.tsv  compound_property.tsv  constant_smiles.tsv  environment_fingerprint.tsv  pair.tsv  property_name.tsv  rule.tsv  rule_environment.tsv  rule_environment_statistics.tsv  rule_smiles.tsv
tests/data/mmpdb/: generate_pyridinol.tsv  phase13_6_multicut_hydrogen_cases.tsv  test_data_2019_rule_environment_pairs.tsv  test_data_2019_rule_environments.tsv
tests/parity/: fixtures.tsv  matrix.tsv  upstream_audit.tsv
tests/python/: _duckdb_dump.py  conftest.py  mmpdb_surplus_classifier.py  test_analytics.py  test_benchmark_analysis.py  test_benchmark_rendering.py  test_benchmark_report.py  test_benchmark_suite.py  test_bindings_core.py  test_build_configuration.py  test_cli.py  test_corpus_provenance.py  test_desalt.py  test_docs_boundary.py  test_docs_build.py  test_duckdb_bulk_equivalence.py  test_duckdb_storage.py  test_facade.py  test_gil_release.py  test_head_to_head.py  test_loading.py  test_mmpdb_parity.py  test_mmpdb_surplus_classification.py  test_no_unclassified_ingestion_sites.py  test_notebook_display.py  test_oemmpa.py  test_package_imports.py  test_parallel_analyze_store_parity.py  test_parity_fixtures.py  test_parity_harness_summary.py  test_parity_matrix.py  test_parity_upstream_audit.py  test_query_layer.py  test_rdkit_comparison.py  test_report_html.py  test_results.py  test_rgroup.py  test_rule_environment_analysis.py  test_stage_benchmark.py  test_statistics_parity.py  (+2 more)
