[build-system]
requires = ["scikit-build-core>=0.8", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "oemmpa"
version = "2.0.0"
description = "Enhanced matched molecular pair capabilities with the OpenEye Toolkits"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Scott Johnson", email = "scott.johnson@bms.com" },
]
keywords = ["chemistry", "openeye", "swig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "openeye-toolkits>=2025.2",
]

[project.scripts]
oemmpa = "oemmpa.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "rich>=13.0",
    "rich-click>=1.8",
    # invoke is needed to type-check/lint tasks.py, which is part of the static
    # analysis target, so the dev extra is self-sufficient for ruff/mypy.
    "invoke>=2.0",
    "vrzn>=0.1.0",
]
docs = [
    "breathe>=4.35",
    "exhale>=0.3",
    "invoke>=2.0",
    "myst-parser>=2.0",
    "sphinx>=7.0",
    "sphinx-autobuild>=2024.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-rtd-theme>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
extend-exclude = ["python/oemmpa/oemmpa.py"]

[tool.mypy]
follow_imports = "normal"
mypy_path = "python"

[[tool.mypy.overrides]]
module = [
    "__builtin__",
    "_oemmpa",
    "oemmpa._build_info",
    "oemmpa.oemmpa",
]
ignore_errors = true
ignore_missing_imports = true

# Untyped or imperfectly-stubbed third-party modules. rdkit and openeye are
# optional native dependencies whose shipped stubs do not type-check cleanly
# (e.g. rdkit-stubs contains a stub-only syntax error), so skip following into
# them rather than letting a vendor stub abort the whole run.
[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "openeye.*",
    "invoke.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pyright]
# Resolve the interpreter from the active environment rather than a hardcoded
# absolute path. Developers who want Pyright to target a specific virtualenv can
# set venvPath/venv in a local (gitignored) pyrightconfig.json.
pythonVersion = "3.13"
include = [
    "python",
    "tests/python",
    "benchmarks",
    "tasks.py",
]
extraPaths = [
    "python",
    "build-debug/swig",
]
ignore = [
    "examples",
    "build-debug",
    "build-debug/**",
    "python/oemmpa/oemmpa.py",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "build/**",
    "build-debug",
    "build-debug/**",
    "dist",
    "dist/**",
    "examples",
    "examples/**",
    "htmlcov",
]

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
build.targets = ["oemmpa_python"]
wheel.install-dir = "."
logging.level = "INFO"
strict-config = false
wheel.py-api = "cp310"
wheel.exclude = ["**.pyc", "**/__pycache__", "*.a", "CMakeFiles/**"]

[tool.scikit-build.cmake.define]
OEMMPA_BUILD_TESTS = "OFF"
OEMMPA_BUILD_PYTHON = "ON"
OPENEYE_USE_SHARED = "ON"
OEMMPA_USE_STABLE_ABI = "ON"
OEMMPA_UNIVERSAL2 = "OFF"

# =============================================================================
# TOML-driven build configuration for scripts/build_python.py
# =============================================================================
# This section is read by build_python.py to parameterize the build.
# The script itself is identical across all projects — only this config changes.
[tool.oe-build]
package-name = "oemmpa"
cmake-test-flag = "OEMMPA_BUILD_TESTS"
rpath-strategy = "platform"  # "platform" = @loader_path/../openeye/libs/{platform}, "simple" = @loader_path

# OpenEye libraries that are expected to be missing from delocate
# (they are provided at runtime by openeye-toolkits, not bundled in the wheel)
expected-missing-libs = [
    "liboechem", "liboesystem", "liboeplatform",
    "liboemath", "libzstd",
]

# Additional CMake defines passed during wheel build (beyond the standard ones).
# Published wheels enable DuckDB-backed storage; the CI wheel jobs provision the
# official libduckdb C++ release bundle and set DUCKDB_ROOT so FindDuckDB.cmake
# locates it. Without that bundle present, this define is a no-op because
# find_package(DuckDB QUIET) leaves OEMMPA_HAS_DUCKDB FALSE.
[tool.oe-build.extra-cmake-defines]
OEMMPA_BUILD_DUCKDB = "ON"
